--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -12,26 +12,22 @@
                 <wm-gridrow name="gridrow8">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
                         <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
-                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)">
+                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully">
                             <wm-layoutgrid columns="1" name="layoutgrid2">
                                 <wm-gridrow name="gridrow9">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn23">
-                                        <wm-form-field readonly="false" name="token" displayname="Token" key="token" type="string" show="false" widget="text"></wm-form-field>
+                                        <wm-form-field name="newPassword" displayname="New Password" key="newPassword" type="string" show="true" widget="text" placeholder="Enter Password" required="required" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        validationmessage="A strong password is at least 8 characters long and includes uppercase and lowercase letters, numbers, and symbols." inputtype="password" updateon="default"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
-                                        <wm-form-field readonly="false" name="newPassword" displayname="New Password" key="newPassword" type="string" show="true" widget="text" placeholder="Enter Password" required="true" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        validationmessage="A strong password is at least 8 characters long and includes uppercase and lowercase letters, numbers, and symbols." inputtype="password"></wm-form-field>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow11">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn25">
-                                        <wm-form-field displayname="Retype Password" widget="text" show="true" type="custom" name="retypePassword" placeholder="Re Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
-                                        required="true" validationmessage="A strong password is at least 8 characters long and includes uppercase and lowercase letters, numbers, and symbols." inputtype="password"></wm-form-field>
+                                        <wm-form-field name="retypePassword" displayname="Retype Password" widget="text" show="true" type="custom" placeholder="Re Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        required="required" validationmessage="A strong password is at least 8 characters long and includes uppercase and lowercase letters, numbers, and symbols." inputtype="password" key="retypePassword"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
+                            <wm-form-field name="token" displayname="Token" key="token" type="string" show="false" widget="text" defaultvalue="bind:token" autocomplete="false" inputtype="text" placeholder="Enter value"></wm-form-field>
                             <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
                                 <wm-button caption="Cancel" type="button" class="btn-warning" name="button3" on-click="button3Click($event, $scope)"></wm-button>
                                 <wm-button caption="Reset Password" type="submit" class="btn-primary" name="button4"></wm-button>
