New files added - [] Files modified - [ManageMunicipalities.html,ManageMunicipalities.js] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -129,7 +129,7 @@
                                             <wm-form-field name="closeTime" displayname="Close Time" show="true" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn1" columnwidth="6">
-                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="true" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID"
+                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="true" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID()"
                                             disabled="true"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
